--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>INDIRA THE MODEL</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,20 +19,14 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script type="text/javascript">
+    <!-- The Javascript can be moved to the end of the html page before the </body> tag --><script type="text/javascript">
       /* curator-feed-default-feed-layout */
-      (function () {
-        var i,
-          e,
-          d = document,
-          s = "script";
-        i = d.createElement("script");
-        i.async = 1;
-        i.charset = "UTF-8";
-        i.src =
-          "https://cdn.curator.io/published/6dd73d0f-077d-4a36-bcd9-3891e883c234.js";
-        e = d.getElementsByTagName(s)[0];
-        e.parentNode.insertBefore(i, e);
+      (function(){
+        if (window.location.href.includes('contact')) {
+          var i,e,d=document,s="script";i=d.createElement("script");i.async=1;i.charset="UTF-8";
+          i.src="https://cdn.curator.io/published/6dd73d0f-077d-4a36-bcd9-3891e883c234.js";
+          e=d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+        }
       })();
     </script>
   </body>
